--- a/sysadmin_base/static/description/index.html
+++ b/sysadmin_base/static/description/index.html
@@ -30,11 +30,7 @@
         <div class="section" id="stock">
             <p href="#id2"><strong>Stock</strong></p>
             <ul>
-                <li>Any product have an option of being an internal equipment, giving the posibility of a new page of
-                    Technical Information of the equipment.</li>
-                <li>Implements an option that allows you to populate hardware fields of items associated to products
-                    that are associated with a
-                    category that has the "Show hardware properties" option enabled.</li>
+                <li>Any product have an option of being an internal equipment.</li>
                 <li>Each product can be associated with an item.</li>
             </ul>
         </div>
